[tool.poetry]
name = "secret-hbot"
version = "0.1.0"
description = ""
authors = ["Denis Krasilnikov <di.krasilnikov@gmail.com>"]
readme = "README.md"
packages = [{include = "secret_hbot"}]

[tool.poetry.dependencies]
python = ">3.9"
aiogram = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
